space button now works well, changed the way I was making backspace work because it was causing some problem idk why, fixed id of '0' on main document, fixed the id of 'backspace' on css

--- a/JSPros/vkey/css/master.css
+++ b/JSPros/vkey/css/master.css
@@ -8,7 +8,7 @@
   font-size: 1.5vw;
 }
 
-#zero, #cross, #enter, #shift, #space {
+#zero, #backpsace, #enter, #shift, #space {
   border-right:0;
 }
 
