changed some styles

--- a/JSPros/css/master.css
+++ b/JSPros/css/master.css
@@ -1,11 +1,3 @@
 .mainContainer {
-  background-color: #2C3540;
-}
-
-.mainHeading h1, h4 {
-  color: #F2A172;
-}
-
-.mainHeading a {
-  color: #90D948;
+  background-color: #ACCDE2;
 }
