--- a/css/master.css
+++ b/css/master.css
@@ -1,13 +1,5 @@
 .mainContainer {
-  background-color: #5A7370;
-}
-
-.mainHeading h1, h4 {
-  color: #F2E8DC;
-}
-
-.mainHeading a {
-  color: #26D474;
+  background-color: #ACCDE2;
 }
 
 .listOfCats a {
