--- a/JSPros/jkey/css/master.css
+++ b/JSPros/jkey/css/master.css
@@ -6,6 +6,7 @@
   background-color: #9FBED1;
   border-right: 1px solid white;
   font-size: 1.5vw;
+  user-select: none;
 }
 
 #zero, #backpsace, #enter, #shift, #space {
