--- a/JSPros/gitRepos/css/main.css
+++ b/JSPros/gitRepos/css/main.css
@@ -291,6 +291,32 @@ body {
   height: 28px;
 }
 
+.primarySection {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
+}
+
+#mainSearch {
+  width: 50%;
+}
+
+#submitButton {
+  width: 50%;
+  padding: 10px;
+  border: 1px solid #6f747b;
+  border-radius: 5px;
+  background-color: #21262d;
+  color: #f9826c;
+  font-size: 1.5ch;
+  margin: 20px 0;
+}
+
+#submitButton:hover {
+  background-color: #0d1117;
+}
 @media only screen and (max-width: 768px) {
   .navHeader {
     display: none;
