finished up writing main code to get the data and showing them

--- a/JSPros/gitRepos/css/main.css
+++ b/JSPros/gitRepos/css/main.css
@@ -316,6 +316,10 @@ body {
 #submitButton:hover {
   background-color: #0d1117;
 }
+
+.hideStuff {
+  display: none !important;
+}
 @media only screen and (max-width: 768px) {
   .navHeader {
     display: none;
