--- a/JSPros/gitRepos/css/main.css
+++ b/JSPros/gitRepos/css/main.css
@@ -329,8 +329,12 @@ body {
   align-items: center;
 }
 
-#error h3,
-h1 {
+#error h3 {
+  margin-top: 15px;
+  color: crimson;
+}
+
+.forbiddenHeading {
   margin-top: 15px;
   color: crimson;
 }
